@@ -1,3 +1,10 @@
+2011-07-11  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	* Glasses/LegendreCoefs.cxx:
+	* Glasses/LegendreCoefs.h:
+	Add InitToValue() function.
+	Add argument checks to several functions.
+
 2011-07-10  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	* Glasses/LegendreCoefs.cxx:
